syntax = "proto3";

package justjoew.asstes;

option go_package = "justjoew/backend/protos";



message GetAllSectionsRequest{}

message GetAllSectionsResonse {
  repeated Section sections = 1;
}

message Section {
  string id = 1;
  string name = 2;
  repeated Asset assetList = 3;
}

message CreateSectionRequest {
  string name = 1;
}

message CreateSectionResponse {
  string name = 1;
}

message Asset {
  string id = 1;
  string sectionName = 2;
  string blobPath = 3;
  int32 orderIndex = 4;
  int32 sectionId = 5;
}
// The request message containing the user's name.
message CreateAssetRequest {
  string sectionName = 1;
  bytes blob = 2;

}

// The response message containing the greetings
message CreateAssetResponse {
  Asset asset = 1;
}


message UpdateAssetOrderRequest {
  string id = 1;
  int32 orderIndex = 2;

}

message UpdateAssetOrderResponse {
  int32 newOrderIndex = 1;
}



service AssetController {

  rpc GetAllSections (GetAllSectionsRequest) returns (GetAllSectionsResonse) {}
  rpc CreateSection (CreateSectionRequest) returns (CreateSectionResponse) {}
  rpc CreateAsset (CreateAssetRequest) returns (CreateAssetResponse) {}
  rpc UpdateAssetorder (UpdateAssetOrderRequest) returns (UpdateAssetOrderResponse) {}

}